// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Validator > can be a flow content element e.g (Heading 1) 1`] = `
<DocumentFragment>
  <h1
    class="border-color-[unset] validator"
  >
    Heading 1
  </h1>
</DocumentFragment>
`;

exports[`Validator > can be a flow content element e.g (Heading 2) 1`] = `
<DocumentFragment>
  <h2
    class="border-color-[unset] validator"
  >
    Heading 2
  </h2>
</DocumentFragment>
`;

exports[`Validator > can be a flow content element e.g (Heading 3) 1`] = `
<DocumentFragment>
  <h3
    class="border-color-[unset] validator"
  >
    Heading 3
  </h3>
</DocumentFragment>
`;

exports[`Validator > can be a flow content element e.g (Heading 4) 1`] = `
<DocumentFragment>
  <h4
    class="border-color-[unset] validator"
  >
    Heading 4
  </h4>
</DocumentFragment>
`;

exports[`Validator > can be a flow content element e.g (Heading 5) 1`] = `
<DocumentFragment>
  <h5
    class="border-color-[unset] validator"
  >
    Heading 5
  </h5>
</DocumentFragment>
`;

exports[`Validator > can be a flow content element e.g (Paragraph) 1`] = `
<DocumentFragment>
  <p
    class="border-color-[unset] validator"
  >
    Paragraph
  </p>
</DocumentFragment>
`;
